# magi-system2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
docs/design/: architecture.md
magi_system2/: __init__.py  cli.py  console.py  discussion.py  facilitator.py  llm.py  media.py  models.py  persona.py  save.py  translator.py  web.py
magi_system2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
magi_system2/static/: style.css
magi_system2/templates/: index.html
tests/: test_models.py
tests/fixtures/: sample_discussion.json
